Initial commit: Java 21 upgraded Golf Course Reservation System with merged features and AI chatbot