@@ -1,45 +1,56 @@
 package com.project.golf.gui;
 
-import java.awt.*;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.time.YearMonth;
-import java.time.format.DateTimeFormatter;
 import com.project.golf.client.Client;
 import com.project.golf.events.Event;
 import com.project.golf.reservation.Reservations;
+import com.project.golf.utils.EmailSender;
+
+import java.awt.*;
+import java.awt.event.*;
+import java.awt.image.BufferedImage;
+import java.io.IOException;
+import java.net.URL;
+import java.time.*;
+import java.time.format.DateTimeFormatter;
+
 import javax.swing.*;
 
 /**
  * MakeReservationGUI.java
  *
- * GUI for making a new golf course reservation
+ * Complex reservation creation interface with date/time selection and event options.
+ * Handles regular tee time bookings and multi-hole event reservations with calendar UI.
  *
- * @author Anoushka Chakravarty (chakr181), L15
+ * Data structures: JTextField for dateField, JButton array holeButtons, JComboBox
+ * for partySizeCombo, JCheckBox for cartCheckBox and eventCheckBox, multiple JPanels.
+ * Algorithm: Calendar dialog for date picking, time picker for tee times, grid layout
+ * for hole selection, event expansion logic. Dynamic UI updates based on event flag.
+ * Features: Date/time selection with UI dialogs, party size configuration, cart rental,
+ * event booking with all holes, calendar invite generation, server synchronization.
  *
- * @version 12/04/2025
+ * @author Anoushka Chakravarty (chakr181), Ethan Billau (ebillau), Connor Landzettel (clandzet), L15
+ *
+ * @version December 7, 2025
  */
+
 public class MakeReservationGUI extends JFrame implements ActionListener {
 
-    private JTextField dateField;
-    private JButton calendarButton;
-    private JButton timeButton;
-    private JButton[] holeButtons;
-    private JButton continueButton;
-    private JButton backButton;
-    private JComboBox<String> partySizeCombo;
-    private JCheckBox cartCheckBox;
+    private JTextField dateField;  // displays selected reservation date
+    private JButton calendarButton;  // button to open calendar date picker
+    private JButton timeButton;  // button to open time picker dialog
+    private JButton[] holeButtons;  // array of buttons for hole/tee box selection
+    private JButton continueButton;  // button to proceed with reservation
+    private JButton backButton;  // button to return to main menu
+    private JButton mapButton;  // button to display course map
+    private JComboBox<String> partySizeCombo;  // dropdown for party size selection
 
-    // Event-specific UI
-    private JCheckBox eventCheckBox;
-    private JPanel eventOptionsPanel;
-    private JComboBox<String> eventHoursCombo;
-    private JLabel holeSelectionLabel;
-    private JPanel holeGridPanel;
-    private JPanel partySizePanel;
+    private JCheckBox cartCheckBox;  // checkbox for golf cart rental request
+    private JCheckBox eventCheckBox;  // checkbox to book as multi-hole event
+    private JPanel eventOptionsPanel;  // panel for event-specific controls
+    private JComboBox<String> eventHoursCombo;  // dropdown for event duration in hours
+    private JLabel holeSelectionLabel;  // label for hole selection section
+    private JPanel holeGridPanel;  // panel containing hole selection buttons
+    private JPanel partySizePanel;  // panel for party size selection
 
     private JCheckBox calendarInviteCheckBox;
 
@@ -47,17 +58,17 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
     private String selectedTime = "9:00 AM";
     private String username;
     private Client client;
-    private String editingReservationId = null;
+    private Reservations editingReservation = null; // Store the full reservation being edited
 
     public MakeReservationGUI(String username, Client client) {
         this(username, client, null);
     }
 
-    public MakeReservationGUI(String username, Client client, String editingReservationId) {
+    public MakeReservationGUI(String username, Client client, Reservations editingReservation) {
         this.username = username;
         this.client = client;
-        this.editingReservationId = editingReservationId;
-        setTitle(editingReservationId != null ? "Edit Reservation" : "Make Reservation");
+        this.editingReservation = editingReservation;
+        setTitle(editingReservation != null ? "Edit Reservation" : "Make Reservation");
         setDefaultCloseOperation(JFrame.DISPOSE_ON_CLOSE);
         setSize(720, 700);
         setLocationRelativeTo(null);
@@ -80,7 +91,7 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
         topPanel.setOpaque(false);
         topPanel.setMaximumSize(new Dimension(Integer.MAX_VALUE, 40));
 
-        backButton = new JButton("<- Back");
+        backButton = new JButton("← Back");
         backButton.setFont(new Font("Arial", Font.BOLD, 14));
         backButton.setBackground(Color.WHITE);
         backButton.setFocusPainted(false);
@@ -90,8 +101,9 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
         panel.add(topPanel);
         panel.add(Box.createVerticalStrut(10));
 
-        // Title
-        JLabel title = new JLabel("Make a Reservation");
+        // Title - change based on whether we're editing or creating
+        String titleText = (editingReservation != null) ? "Edit Reservation" : "Make a Reservation";
+        JLabel title = new JLabel(titleText);
         title.setAlignmentX(CENTER_ALIGNMENT);
         title.setFont(new Font("Arial", Font.BOLD, 24));
         title.setForeground(Color.WHITE);
@@ -148,6 +160,16 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
         holeSelectionLabel.setForeground(Color.WHITE);
         holeSelectionLabel.setFont(new Font("Arial", Font.BOLD, 14));
         panel.add(holeSelectionLabel);
+
+        panel.add(Box.createVerticalStrut(10));
+
+        // Map button
+        mapButton = new JButton("View Course Map");
+        mapButton.setAlignmentX(CENTER_ALIGNMENT);
+        mapButton.setFont(new Font("Arial", Font.PLAIN, 13));
+        mapButton.setFocusPainted(false);
+        mapButton.addActionListener(this);
+        panel.add(mapButton);
 
         panel.add(Box.createVerticalStrut(10));
 
@@ -268,8 +290,204 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
         continueButton.addActionListener(this);
         panel.add(continueButton);
 
+        // Pre-fill form if editing existing reservation
+        if (editingReservation != null) {
+            prefillFormForEdit();
+        }
+
         setContentPane(panel);
         setVisible(true);
+    }
+
+    /**
+     * Pre-fills the reservation form with existing reservation data when editing.
+     * Sets date, time, hole, and party size from the editingReservation object.
+     */
+    private void prefillFormForEdit() {
+        if (editingReservation == null) {
+            return;
+        }
+
+        // Pre-fill date (format: MM/dd/yyyy from reservation's date which is YYYY-MM-DD)
+        try {
+            String resDate = editingReservation.getDate(); // Format: YYYY-MM-DD or MM/dd/yyyy
+            if (resDate != null && !resDate.isEmpty()) {
+                // Check if date is in YYYY-MM-DD format and convert to MM/dd/yyyy
+                if (resDate.matches("\\d{4}-\\d{2}-\\d{2}")) {
+                    LocalDate date = LocalDate.parse(resDate, DateTimeFormatter.ofPattern("yyyy-MM-dd"));
+                    dateField.setText(date.format(DateTimeFormatter.ofPattern("MM/dd/yyyy")));
+                } else {
+                    // Already in MM/dd/yyyy format
+                    dateField.setText(resDate);
+                }
+            }
+        } catch (Exception e) {
+            System.err.println("Error parsing date: " + e.getMessage());
+        }
+
+        // Pre-fill time
+        String resTime = editingReservation.getTime(); // Format: HH:MM
+        if (resTime != null && !resTime.isEmpty()) {
+            try {
+                // Convert 24-hour time to 12-hour AM/PM format
+                LocalTime time = LocalTime.parse(resTime, DateTimeFormatter.ofPattern("HH:mm"));
+                selectedTime = time.format(DateTimeFormatter.ofPattern("h:mm a"));
+                timeButton.setText(selectedTime);
+            } catch (Exception e) {
+                // If already in AM/PM format or parsing fails, use as-is
+                selectedTime = resTime;
+                timeButton.setText(resTime);
+            }
+        }
+
+        // Pre-fill hole (teeBox field contains hole number like "Hole 1")
+        String teeBox = editingReservation.getTeeBox();
+        if (teeBox != null && !teeBox.isEmpty() && !teeBox.startsWith("Event:")) {
+            try {
+                // Extract hole number from "Hole X" format
+                if (teeBox.toLowerCase().contains("hole")) {
+                    String holeNumStr = teeBox.replaceAll("[^0-9]", ""); // Extract just numbers
+                    if (!holeNumStr.isEmpty()) {
+                        int holeNum = Integer.parseInt(holeNumStr);
+                        if (holeNum >= 1 && holeNum <= 18) {
+                            selectedHole = holeNum;
+                            // Highlight the selected hole button
+                            for (int i = 0; i < holeButtons.length; i++) {
+                                if (i + 1 == selectedHole) {
+                                    holeButtons[i].setBackground(new Color(34, 139, 34)); // Green
+                                    holeButtons[i].setForeground(Color.WHITE);
+                                } else {
+                                    holeButtons[i].setBackground(Color.WHITE);
+                                    holeButtons[i].setForeground(Color.BLACK);
+                                }
+                            }
+                        }
+                    }
+                }
+            } catch (Exception e) {
+                System.err.println("Error parsing teeBox: " + e.getMessage());
+            }
+        }
+
+        // Pre-fill party size
+        int partySize = editingReservation.getPartySize();
+        if (partySize >= 1 && partySize <= 4) {
+            partySizeCombo.setSelectedIndex(partySize - 1); // Index 0 = party size 1, etc.
+        }
+
+        // Update continue button text to indicate editing
+        continueButton.setText("Update Reservation");
+    }
+
+    private Image getScaledImage(Image srcImg, int w, int h) {
+        if (w <= 0 || h <= 0) {
+            return srcImg;
+        }
+        BufferedImage resizedImg = new BufferedImage(w, h, BufferedImage.TYPE_INT_ARGB);
+        Graphics2D g2 = resizedImg.createGraphics();
+        g2.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_BILINEAR);
+        g2.setRenderingHint(RenderingHints.KEY_RENDERING, RenderingHints.VALUE_RENDER_QUALITY);
+        g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
+        g2.drawImage(srcImg, 0, 0, w, h, null);
+        g2.dispose();
+        return resizedImg;
+    }
+
+    private void showCourseMap() {
+        // Load map from classpath
+        URL imageUrl = getClass().getResource("golfCourseMap.png");
+        if (imageUrl == null) {
+            JOptionPane.showMessageDialog(this,
+                    "Could not load course map image (golfCourseMap.png).",
+                    "Error",
+                    JOptionPane.ERROR_MESSAGE);
+            return;
+        }
+
+        ImageIcon originalIcon = new ImageIcon(imageUrl);
+        Image originalImage = originalIcon.getImage();
+        int imgWidth = originalIcon.getIconWidth();
+        int imgHeight = originalIcon.getIconHeight();
+
+        int windowWidth = 800;
+        int windowHeight = 600;
+
+        double fitScaleX = (double) windowWidth / imgWidth;
+        double fitScaleY = (double) windowHeight / imgHeight;
+        double initialZoom = 0;
+        if (initialZoom > 1.0) {
+            initialZoom = 1.0; // don't zoom above 100% by default
+        } else {
+            initialZoom = Math.min(fitScaleX, fitScaleY);
+        }
+
+        final double[] zoomFactor = { initialZoom <= 0 ? 1.0 : initialZoom };
+
+        JLabel mapLabel = new JLabel();
+        mapLabel.setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
+
+        Runnable updateImage = () -> {
+            int newW = (int) (imgWidth * zoomFactor[0]);
+            int newH = (int) (imgHeight * zoomFactor[0]);
+            Image scaled = getScaledImage(originalImage, newW, newH);
+            mapLabel.setIcon(new ImageIcon(scaled));
+            mapLabel.revalidate();
+            mapLabel.repaint();
+        };
+
+        updateImage.run();
+
+        JScrollPane scrollPane = new JScrollPane(mapLabel);
+
+        JDialog dialog = new JDialog(this, "Course Map", false); // modeless
+        dialog.setDefaultCloseOperation(JDialog.DISPOSE_ON_CLOSE);
+
+        JPanel controlsPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        JButton zoomInButton = new JButton("+");
+        JButton zoomOutButton = new JButton("-");
+        JButton resetButton = new JButton("Reset");
+        JLabel zoomLabel = new JLabel();
+
+        Runnable updateZoomLabel = () -> {
+            zoomLabel.setText("Zoom: " + (int) (zoomFactor[0] * 100) + "%");
+        };
+        updateZoomLabel.run();
+
+        zoomInButton.addActionListener(e -> {
+            zoomFactor[0] *= 1.25;
+            if (zoomFactor[0] > 4.0) zoomFactor[0] = 4.0;
+            updateImage.run();
+            updateZoomLabel.run();
+        });
+
+        zoomOutButton.addActionListener(e -> {
+            zoomFactor[0] /= 1.25;
+            if (zoomFactor[0] < 0.25) zoomFactor[0] = 0.25;
+            updateImage.run();
+            updateZoomLabel.run();
+        });
+
+        double finalInitialZoom = initialZoom;
+        resetButton.addActionListener(e -> {
+            zoomFactor[0] = finalInitialZoom <= 0 ? 1.0 : finalInitialZoom;
+            updateImage.run();
+            updateZoomLabel.run();
+        });
+
+        controlsPanel.add(new JLabel("View:"));
+        controlsPanel.add(zoomOutButton);
+        controlsPanel.add(zoomInButton);
+        controlsPanel.add(resetButton);
+        controlsPanel.add(Box.createHorizontalStrut(10));
+        controlsPanel.add(zoomLabel);
+
+        dialog.getContentPane().setLayout(new BorderLayout());
+        dialog.getContentPane().add(controlsPanel, BorderLayout.NORTH);
+        dialog.getContentPane().add(scrollPane, BorderLayout.CENTER);
+
+        dialog.setSize(windowWidth, windowHeight);
+        dialog.setLocationRelativeTo(this);
+        dialog.setVisible(true);
     }
 
     /**
@@ -306,7 +524,7 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
                 if (hour == 17 && minute > 0) break;
                 String period = hour < 12 ? "AM" : "PM";
                 int displayHour = hour <= 12 ? hour : hour - 12;
-                slots[index++] = "%d:%02d %s".formatted(displayHour, minute, period);
+                slots[index++] = String.format("%d:%02d %s", displayHour, minute, period);
             }
         }
 
@@ -376,6 +594,8 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
             showCalendar();
         } else if (e.getSource() == timeButton) {
             showTimePicker();
+        } else if (e.getSource() == mapButton) {
+            showCourseMap();
         } else if (e.getSource() == continueButton) {
             // Validation - only need hole selection for non-events
             if (!eventCheckBox.isSelected() && selectedHole == -1) {
@@ -403,22 +623,19 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
             LocalDate parsedDate = LocalDate.parse(date, inputFormatter);
             String formattedDate = parsedDate.format(outputFormatter);
 
-            // Basic conflict check for non-event reservations
+            // Conflict check for reservations and events
             com.project.golf.database.Database db = com.project.golf.database.Database.getInstance();
             if (!isEvent) {
                 String teeBox = "Hole " + selectedHole;
-                java.util.ArrayList<Reservations> existingReservations = db.getReservationsByDate(formattedDate);
-                for (Reservations existing : existingReservations) {
-                    if (editingReservationId != null && existing.getReservationId().equals(editingReservationId)) {
-                        continue;
-                    }
-                    if (existing.getTime().equals(time) && existing.getTeeBox().equals(teeBox)) {
-                        JOptionPane.showMessageDialog(this,
-                                "This time slot is already booked for " + teeBox + " at " + time + ".\nPlease select a different time or hole.",
-                                "Time Slot Unavailable",
-                                JOptionPane.WARNING_MESSAGE);
-                        return;
-                    }
+                
+                // Check if there's a conflict with existing reservations or events
+                String editingResId = (editingReservation != null) ? editingReservation.getReservationId() : null;
+                if (db.hasReservationConflict(formattedDate, time, teeBox, editingResId)) {
+                    JOptionPane.showMessageDialog(this,
+                            "This time slot conflicts with an existing reservation or event.\nPlease select a different time or hole.",
+                            "Time Slot Unavailable",
+                            JOptionPane.WARNING_MESSAGE);
+                    return;
                 }
             }
 
@@ -441,30 +658,58 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
 
                 double price = 0.0;
 
-                // Event constructor will automatically set partySize=200 and teeBox="All"
-                Event event = new Event(reservationId, username, formattedDate, selectedTime,
-                        200, "All", price, endDateStr, endTimeStr);
+                // Check if we have a client connection (multi-device mode)
+                if (client != null) {
+                    try {
+                        // Send event request to server
+                        String response = client.createEvent(username, formattedDate, selectedTime,
+                                                              endDateStr, endTimeStr, price);
+                        
+                        if (response.startsWith("RESP|OK|")) {
+                            String cartInfo = needsCart ? " with golf cart" : "";
+                            
+                            JOptionPane.showMessageDialog(this,
+                                    String.format("Event Request Submitted!\n\nYour event request has been sent to the admin for approval.\n\nDate: %s\nStart Time: %s\nEnd Time: %s\nAll Holes\nParty Size: 200%s\nDuration: %d hours\n\nYou will be notified once the admin approves your event.",
+                                            date, time, endTimeStr, cartInfo, hours),
+                                    "Event Request Pending",
+                                    JOptionPane.INFORMATION_MESSAGE);
 
-                boolean added = db.addReservation(event);
-                if (added) {
-                    if (editingReservationId != null) {
-                        db.removeReservation(editingReservationId);
+                            dispose();
+                            SwingUtilities.invokeLater(() -> new ManageReservationsGUI(username, client));
+                        } else {
+                            JOptionPane.showMessageDialog(this,
+                                    "Failed to submit event request: " + response,
+                                    "Error", JOptionPane.ERROR_MESSAGE);
+                        }
+                    } catch (IOException ex) {
+                        JOptionPane.showMessageDialog(this,
+                                "Connection error: " + ex.getMessage(),
+                                "Error", JOptionPane.ERROR_MESSAGE);
                     }
-                    db.saveToFile();
-
-                    String cartInfo = needsCart ? " with golf cart" : "";
-                    String action = editingReservationId != null ? "updated" : "confirmed";
-                    
-                    JOptionPane.showMessageDialog(this,
-                            "Event Reservation %s!\n\nReservation ID: %s\nDate: %s\nStart Time: %s\nEnd Time: %s\nAll Holes\nParty Size: 200%s\nDuration: %d hours".formatted(
-                                    action, reservationId, date, time, endTimeStr, cartInfo, hours),
-                            "Success",
-                            JOptionPane.INFORMATION_MESSAGE);
-
-                    dispose();
-                    SwingUtilities.invokeLater(() -> new ManageReservationsGUI(username, client));
                 } else {
-                    JOptionPane.showMessageDialog(this, "Failed to create event reservation.", "Error", JOptionPane.ERROR_MESSAGE);
+                    // Local mode - direct database access
+                    Event event = new Event(reservationId, username, formattedDate, selectedTime,
+                            200, "All", price, endDateStr, endTimeStr);
+
+                    boolean added = db.addPendingEvent(event);
+                    if (added) {
+                        db.saveToFile();
+
+                        String cartInfo = needsCart ? " with golf cart" : "";
+                        
+                        JOptionPane.showMessageDialog(this,
+                                String.format("Event Request Submitted!\n\nYour event request has been sent to the admin for approval.\n\nEvent ID: %s\nDate: %s\nStart Time: %s\nEnd Time: %s\nAll Holes\nParty Size: 200%s\nDuration: %d hours\n\nYou will be notified once the admin approves your event.",
+                                        reservationId, date, time, endTimeStr, cartInfo, hours),
+                                "Event Request Pending",
+                                JOptionPane.INFORMATION_MESSAGE);
+
+                        dispose();
+                        SwingUtilities.invokeLater(() -> new ManageReservationsGUI(username, client));
+                    } else {
+                        JOptionPane.showMessageDialog(this,
+                                "Failed to submit event request.",
+                                "Error", JOptionPane.ERROR_MESSAGE);
+                    }
                 }
                 return;
             }
@@ -473,51 +718,140 @@ public class MakeReservationGUI extends JFrame implements ActionListener {
             int partySize = Integer.parseInt((String) partySizeCombo.getSelectedItem());
             String teeBox = "Hole " + selectedHole;
             
-            Reservations reservation = new Reservations(reservationId, username, formattedDate, time, partySize, teeBox, 0.0, false);
-            boolean added = db.addReservation(reservation);
-            if (added) {
-                if (editingReservationId != null) {
-                    db.removeReservation(editingReservationId);
-                }
-
-                db.saveToFile(); // Persist changes to disk
-                
-                /**
-                 * Send calendar invite if user requested it.
-                 * Retrieve user's email from database and send iCalendar invite.
-                 */
-                if (sendCalendarInvite) {
-                    String userEmail = db.getUserEmail(username);
-                    if (userEmail != null && !userEmail.isEmpty()) {
-                        new Thread(() -> {
-                            boolean emailSent = com.project.golf.utils.EmailSender.sendCalendarInvite(
-                                userEmail, date, time, selectedHole, partySize, reservationId
-                            );
-                            if (!emailSent) {
-                                System.err.println("Failed to send calendar invite to: " + userEmail);
+            // Check if we have a client connection (multi-device mode)
+            if (client != null) {
+                try {
+                    String editingResId = (editingReservation != null) ?
+                                           editingReservation.getReservationId() : null;
+                    String response = client.createReservation(username, formattedDate, time,
+                                                                partySize, teeBox, 0.0, editingResId);
+                    
+                    if (response.startsWith("RESP|OK|")) {
+                        String cartInfo = needsCart ? " with golf cart" : "";
+                        
+                        // Extract reservation ID from server response
+                        String[] responseParts = response.split("\\|");
+                        String serverResId = reservationId; // default
+                        if (responseParts.length > 2) {
+                            String[] resFields = responseParts[2].split(",");
+                            if (resFields.length > 0) {
+                                serverResId = resFields[0];
                             }
-                        }).start();
+                        }
+                        
+                        /**
+                         * Send calendar invite if user requested it.
+                         * Retrieve user's email from server and send iCalendar invite.
+                         */
+                        if (sendCalendarInvite) {
+                            try {
+                                String emailResponse = client.getUserEmail(username);
+                                
+                                // Parse response: RESP|OK|email@example.com
+                                String userEmail = null;
+                                if (emailResponse != null && emailResponse.startsWith("RESP|OK|")) {
+                                    userEmail = emailResponse.substring(8); // Skip "RESP|OK|"
+                                }
+                                
+                                if (userEmail != null && !userEmail.isEmpty()) {
+                                    final String finalEmail = userEmail;
+                                    String finalResId = serverResId;
+                                    new Thread(() -> {
+                                        boolean emailSent = EmailSender.sendCalendarInvite(
+                                            finalEmail, date, time, selectedHole, partySize, finalResId
+                                        );
+                                        if (!emailSent) {
+                                            SwingUtilities.invokeLater(() -> {
+                                                JOptionPane.showMessageDialog(null, 
+                                                    "Failed to send calendar invite. Please try again.",
+                                                    "Email Error", JOptionPane.WARNING_MESSAGE);
+                                            });
+                                        }
+                                    }).start();
+                                }
+                            } catch (Exception e) {
+                                System.err.println("Error getting user email for calendar invite: " + e.getMessage());
+                            }
+                        }
+                        
+                        String action = (editingReservation != null) ? "updated" : "confirmed";
+                        String calendarInfo = sendCalendarInvite ? "\nCalendar invite will be sent to your email." : "";
+                        JOptionPane.showMessageDialog(this,
+                            String.format("Reservation %s!\n\nReservation ID: %s\nDate: %s\nTime: %s\nHole: %d\nParty Size: %d%s%s",
+                                action, serverResId, date, time, selectedHole, partySize, cartInfo, calendarInfo),
+                            "Success",
+                            JOptionPane.INFORMATION_MESSAGE);
+                        
+                        dispose();
+                        SwingUtilities.invokeLater(() -> new ManageReservationsGUI(username, client));
+                    } else {
+                        JOptionPane.showMessageDialog(this,
+                                "Failed to make reservation: " + response,
+                                "Error", JOptionPane.ERROR_MESSAGE);
                     }
+                } catch (IOException ex) {
+                    JOptionPane.showMessageDialog(this,
+                            "Connection error: " + ex.getMessage(),
+                            "Error", JOptionPane.ERROR_MESSAGE);
                 }
-                
-                String cartInfo = needsCart ? " with golf cart" : "";
-                String action = editingReservationId != null ? "updated" : "confirmed";
-                String calendarInfo = sendCalendarInvite ? "\nCalendar invite will be sent to your email." : "";
-                JOptionPane.showMessageDialog(this,
-                        "Reservation %s!\n\nReservation ID: %s\nDate: %s\nTime: %s\nHole: %d\nParty Size: %d%s%s".formatted(
-                                action, reservationId, date, time, selectedHole, partySize, cartInfo, calendarInfo),
-                    "Success",
-                    JOptionPane.INFORMATION_MESSAGE);
-                
-                // Return to reservation management screen
-                dispose();
-                SwingUtilities.invokeLater(() -> new ManageReservationsGUI(username, client));
             } else {
-                JOptionPane.showMessageDialog(this, "Failed to make reservation. Please try again.", "Error", JOptionPane.ERROR_MESSAGE);
+                // Local mode - direct database access
+                Reservations reservation = new Reservations(reservationId, username, formattedDate,
+                                                             time, partySize, teeBox, 0.0, false);
+                boolean added = db.addReservation(reservation);
+                if (added) {
+                    // If editing, remove the old reservation
+                    if (editingReservation != null) {
+                        db.removeReservation(editingReservation.getReservationId());
+                    }
+
+                    try {
+                        db.saveToFile(); // Persist changes to disk
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                    }
+                    
+                    /**
+                     * Send calendar invite if user requested it.
+                     * Retrieve user's email from database and send iCalendar invite.
+                     */
+                    if (sendCalendarInvite) {
+                        String userEmail = db.getUserEmail(username);
+                        if (userEmail != null && !userEmail.isEmpty()) {
+                            new Thread(() -> {
+                                boolean emailSent = EmailSender.sendCalendarInvite(
+                                    userEmail, date, time, selectedHole, partySize, reservationId
+                                );
+                                if (!emailSent) {
+                                    System.err.println("Failed to send calendar invite to: " + userEmail);
+                                }
+                            }).start();
+                        }
+                    }
+                    
+                    String cartInfo = needsCart ? " with golf cart" : "";
+                    String action = (editingReservation != null) ? "updated" : "confirmed";
+                    String calendarInfo = sendCalendarInvite ? "\nCalendar invite will be sent to your email." : "";
+                    JOptionPane.showMessageDialog(this,
+                        String.format("Reservation %s!\n\nReservation ID: %s\nDate: %s\nTime: %s\nHole: %d\nParty Size: %d%s%s",
+                            action, reservationId, date, time, selectedHole, partySize, cartInfo, calendarInfo),
+                        "Success",
+                        JOptionPane.INFORMATION_MESSAGE);
+                    
+                    // Return to reservation management screen
+                    dispose();
+                    SwingUtilities.invokeLater(() -> new ManageReservationsGUI(username, client));
+                } else {
+                    JOptionPane.showMessageDialog(this,
+                            "Failed to make reservation. Please try again.",
+                            "Error", JOptionPane.ERROR_MESSAGE);
+                }
             }
 
         } catch (Exception ex) {
-            JOptionPane.showMessageDialog(this, "Error making reservation: " + ex.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
+            JOptionPane.showMessageDialog(this,
+                    "Error making reservation: " + ex.getMessage(),
+                    "Error", JOptionPane.ERROR_MESSAGE);
             ex.printStackTrace();
         }
     }
